test/libyul/yulSyntaxTests/number_literal_4.yul
{ let x := 67.235 }
// ----
// ParserError 4828: (11-17): Invalid number literal.
